added login page
added login page to check credentials

--- a/views/exist.html
+++ b/views/exist.html
@@ -53,7 +53,7 @@
             <div class="form-group">
                 <p><a href="http://localhost:3000/signup">New User?</a></p>
             </div>
-            <button type="submit" class="submit-btn">Sign Up</button>
+            <button type="submit" class="submit-btn">Sign In</button>
         </form>
     </form>
 </body>
